--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
     "lodash": "^4.17.15",
     "next": "^9.2.1",
     "react": "^16.12.0",
