--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.1",
+    "axios": "^0.18.0",
+    "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
     "next": "^9.2.1",
     "react": "^16.12.0",
